minor changes to animal övning

--- a/Animal exceptions/AnimalTesting/AnimalTesting.csproj
+++ b/Animal exceptions/AnimalTesting/AnimalTesting.csproj
@@ -54,6 +54,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Animal exceptions\Animal exceptions.csproj">
+      <Project>{862413bb-a9d9-402c-9a67-c0c1376f0906}</Project>
+      <Name>Animal exceptions</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
