--- a/BirdWatcher.Web_StartProject/BirdWatcher.Web.csproj
+++ b/BirdWatcher.Web_StartProject/BirdWatcher.Web.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="Controllers\ControllerClass.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.7" />
   </ItemGroup>
 
